--- a/style.css
+++ b/style.css
@@ -3,12 +3,11 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto Mono', monospace;
 }
 
 /* Style the header */
 .header {
-    background-color: #f1f1f1;
     padding: 30px;
     text-align: center;
     font-size: 35px;
@@ -18,23 +17,46 @@ body {
 .row {
     display: -webkit-flex;
     display: flex;
+    flex-wrap: wrap;
 }
 
-/* Create three equal columns that sits next to each other */
-.column {
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    margin: 3px 3px 3px 3px;
+    border: lightgrey;
+    border-style: solid;
 }
 
-/* Style the footer */
+.template {
+    display: none;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+    text-align: center;
+    padding: 2px 16px;
+}
+
+.sunrise {
+    border: lightgrey;
+    border-style: solid;
+}
+
+.sunset {
+    border: lightgrey;
+    border-style: solid;
+}
+
 .footer {
     background-color: #f1f1f1;
     padding: 10px;
     text-align: center;
 }
+
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
 @media (max-width: 600px) {
