--- a/style.css
+++ b/style.css
@@ -17,7 +17,35 @@ body {
 .row {
     display: -webkit-flex;
     display: flex;
-    flex-wrap: wrap;
+}
+
+/* Create three unequal columns that sits next to each other */
+.column {
+    padding: 10px;
+    height: 300px;
+}
+
+/* Left and right column */
+.column.right {
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+}
+
+.column.left {
+    -webkit-flex: 0.4;
+    -ms-flex: 0.4;
+    flex: 0.4;
+}
+
+/* Middle column */
+.column.middle {
+   -webkit-flex: 4;
+   -ms-flex: 4;
+   flex: 4;
+   display: flex;
+   justify-content: space-around;
+   flex-wrap: wrap;
 }
 
 .card {
@@ -26,6 +54,7 @@ body {
     margin: 3px 3px 3px 3px;
     border: lightgrey;
     border-style: solid;
+    width: 200px;
 }
 
 .template {
@@ -51,12 +80,51 @@ body {
     border-style: solid;
 }
 
-.footer {
-    background-color: #f1f1f1;
-    padding: 10px;
-    text-align: center;
+.bar {
+    width: 49%;
+    margin: 0px 5px 5px 5px;
 }
 
+.barBG {
+    width: 100%;
+    background-color: #ddd;
+    border-radius: 5px;
+}
+
+.proficiency {
+    text-align: right;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 6px;
+    border-radius: 5px;
+    color: white;
+}
+
+.barBG:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+/* Style all font awesome icons */
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 55px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+    opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+}
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
 @media (max-width: 600px) {
